dhall/tests/type-inference/failure/unit/UnionTypeNotType.txt
Type error: error: InvalidVariantType
 --> <current file>:1:7
  |
1 | < x : True >
  |       ^^^^ InvalidVariantType
  |
